# sapde

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.dashboard  GUION_VIDEO.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
etl_cpp/: CMakeLists.txt
etl_cpp/src/: csv_io.hpp  etl_main.cpp
models/: ANFIS_v1_metadata.json  ANFIS_v2_metadata.json  LightGBM_v1_metadata.json  LightGBM_v2_metadata.json  MLP_v1_metadata.json  MLP_v2_metadata.json  MLP_v3_metadata.json  RandomForest_v1_metadata.json  RandomForest_v2_metadata.json  SVM_v1_metadata.json  SVM_v2_metadata.json  SVM_v3_metadata.json  SVM_v4_metadata.json  SVM_v5_metadata.json
notebooks/: 01_eda.py
reports/: eda_resumen.txt
scripts/: init_db.sql  run.ps1  seed_predicciones.py  setup.ps1  streamlit_config.toml  test_prediccion.py
src/sapde/: __init__.py  config.py
src/sapde/api/: __init__.py  dependencies.py  main.py  schemas.py
src/sapde/api/routes/: health.py  predict.py  students.py
src/sapde/dashboard/: app.py  utils.py
src/sapde/dashboard/pages/: 1_Prediccion.py  2_Estudiantes_en_Riesgo.py  3_Metricas_Modelos.py
src/sapde/data/: __init__.py  synthetic.py
src/sapde/db/: __init__.py  crud.py  models.py  session.py
src/sapde/etl/: __init__.py  cpp_runner.py  fallback.py  pipeline.py
src/sapde/eval/: __init__.py
src/sapde/explain/: __init__.py  run_shap.py  shap_explainer.py
src/sapde/features/: __init__.py  engineering.py
src/sapde/models/: __init__.py  anfis.py  artifacts.py  evaluator.py  pipeline_ml.py  train.py
src/sapde/validation/: report_generator.py  run_validation.py  validador.py
tests/: __init__.py  test_fase0.py  test_fase1.py  test_fase2.py  test_fase3.py  test_fase4.py  test_fase5.py  test_fase6.py  test_fase7.py
