[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sapde"
version = "0.1.0"
description = "Sistema de Analítica Predictiva de Deserción Estudiantil"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
sapde-generar-datos = "sapde.data.synthetic:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/sapde"]
omit = ["*/tests/*"]
